2003-06-03  Adam Fedor  <fedor@gnu.org>

	* target.make (darwin/BUNDLE_LD): Use libtool
	(darwin/AFTER_INSTALL_SHARED_LIB_CMD): Link to the LIB_LINK_FILE
	as well.

Tue Jun  3 11:51:02 2003  Nicola Pero  <n.pero@mi.flashnet.it>

	* Instance/Documentation/autogsdoc.make (internal-doc-install_):
	Fixed typo - added missing ";".

2003-06-02 18:16  Alexander Malmberg <alexander@malmberg.org>

	* Instance/Documentation/autogsdoc.make (internal-doc-install_):
	Add a missing "\" line continuation.

	(internal-doc-uninstall_): Add an $(END_ECHO) to balance the
	echoing.

Mon Jun  2 10:21:11 2003  Nicola Pero  <n.pero@mi.flashnet.it>

	* GNUmakefile.in (install): Only create the symlink Makefiles -->
	Library/Makefiles if symbolic links are available.  (Problems
	reported by Matt Rice).

Sat May 31 09:13:07 2003  Matt Rice <ratmice@yahoo.com>, 
	                  David Ayers <d.ayers@inode.at>

	* Instance/gswapp.make (internal-gswapp-install_): Fixed typo:
	removed excess bracket.

Fri May 30 23:28:55 2003  Nicola Pero  <n.pero@mi.flashnet.it>

	* common.make (OBJC_FLAGS): Added -fno-strict-aliasing.

2003-05-29  Adam Fedor  <fedor@gnu.org>

	* target.make (TARGET_SYSTEM_LIBS): Remove -ldl (added when necessary
	by gnustep-base).

Wed May 28 09:47:42 2003  Nicola Pero  <n.pero@mi.flashnet.it>

	* Instance/framework.make: Use test -r instead of test -f to check
	that a file, which might be a symlink, exists.
	* Instance/framework.make (internal-framework-install_): Always remove
	the old symlinks without checking.

Tue May 27 16:52:27 2003  Nicola Pero  <n.pero@mi.flashnet.it>

	* Instance/Documentation/javadoc.make (internal-doc-install_): Fixed line breaking
	typo.

Tue May 27 13:21:57 2003  Nicola Pero  <n.pero@mi.flashnet.it>

	* Instance/objc.make: Remove old deprecation warning.
	* Instance/tool.make: The same.
	
Tue May 27 13:12:59 2003  Nicola Pero  <n.pero@mi.flashnet.it>

	* Instance/application.make: Use ECHO_NOTHING in commands which